test/nostdlib/virtualcall3.good
virtualcall3.chpl:33: error: (a = 0, b = 1, c = 1, d = 0, e = 0, f = 0, g = 0)
